--- a/tests/Opten.Web.Infrastructure.Test/Opten.Web.Infrastructure.Test.csproj
+++ b/tests/Opten.Web.Infrastructure.Test/Opten.Web.Infrastructure.Test.csproj
@@ -41,6 +41,9 @@
     <Reference Include="nunit.framework, Version=3.10.1.0, Culture=neutral, PublicKeyToken=2638cd05610744eb, processorArchitecture=MSIL">
       <HintPath>..\..\packages\NUnit.3.10.1\lib\net45\nunit.framework.dll</HintPath>
     </Reference>
+    <Reference Include="Opten.Common, Version=2.4.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\..\packages\Opten.Common.2.4.0\lib\net45\Opten.Common.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.ComponentModel.DataAnnotations" />
     <Reference Include="System.Core" />
