--- a/tests/Opten.Web.Infrastructure.Test/packages.config
+++ b/tests/Opten.Web.Infrastructure.Test/packages.config
@@ -2,4 +2,5 @@
 <packages>
   <package id="Newtonsoft.Json" version="10.0.3" targetFramework="net45" />
   <package id="NUnit" version="3.10.1" targetFramework="net45" />
+  <package id="Opten.Common" version="2.4.0" targetFramework="net45" />
 </packages>
