--- a/tests/Opten.Web.Infrastructure.Test/packages.config
+++ b/tests/Opten.Web.Infrastructure.Test/packages.config
@@ -2,5 +2,6 @@
 <packages>
   <package id="Newtonsoft.Json" version="12.0.1" targetFramework="net45" />
   <package id="NUnit" version="3.11.0" targetFramework="net45" />
+  <package id="NUnit3TestAdapter" version="3.13.0" targetFramework="net45" />
   <package id="Opten.Common" version="3.3.1" targetFramework="net45" />
 </packages>
